--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="header">
 	<div class="container">
 		<nav>
-			<img src="D:\profile\logo.jpg" class="logo">
+			<img src="logo.jpg" class="logo">
 			<ul>
 			<li><a href="#header">Home</a></li>
 			<li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
 		</nav>
 		<div class="header-text">
 		<h1>Hi, I'm <span>Suvetha</span><br>Practicing Full-Stack<br>Development</h1>
-<img src="D:\profile\ava-back.jpeg">
+<img src="ava-back.jpeg">
 
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 <div class="container">
 <div class="row">
 <div class="about-col-1">
-<img src="D:\profile\ava-aboutme.jpeg" width=90% height=100%>
+<img src="ava-aboutme.jpeg" width=90% height=100%>
 </div>
 <div class="about-col-2">
 <h1 class="sub-title">ABOUT ME</h1>
@@ -114,7 +114,7 @@ Excellent written and verbal communication skills. seeking an entry-level positi
 <div class="work-list">
 
 <div class="work">
-<img src="D:\profile\w3schools.jpeg">
+<img src="w3schools.jpeg">
 <div class="layer">
 <h3>W3Schools Website Clone</h3>
 <p>A complete single page Clone website of W3Schools</p>
@@ -123,7 +123,7 @@ Excellent written and verbal communication skills. seeking an entry-level positi
 </div>
 
 <div class="work">
-<img src="D:\profile\portfolio.jpeg">
+<img src="portfolio.jpeg">
 <div class="layer">
 <h3>Portfolio Website</h3>
 <p>This website gives the complete details of my work and experience</p>
@@ -132,7 +132,7 @@ Excellent written and verbal communication skills. seeking an entry-level positi
 </div>
 
 <div class="work">
-<img src="D:\profile\movie.jpeg">
+<img src="movie.jpeg">
 <div class="layer">
 <h3>Movie Update Website</h3>
 <p>This website is used to add new movies released in theatre and the old movies can also be deleted from the website</p>
@@ -161,7 +161,7 @@ Excellent written and verbal communication skills. seeking an entry-level positi
 
 <!-------------------download a file---------------->
 
-<a href="D:\profile\myCV.pdf" download class="btn btn2">Download CV</a>
+<a href="myCV.pdf" download class="btn btn2">Download CV</a>
 </div>
 
 <div class="contact-right">
